// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt Table Basic usage 1`] = `
<div class="js-bolt-table c-bolt-table">
  <table>
    <thead>
      <tr>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bolt Table prop - Borderless table: false 1`] = `
<div class="js-bolt-table c-bolt-table">
  <table>
    <thead>
      <tr>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bolt Table prop - Borderless table: true 1`] = `
<div class="js-bolt-table c-bolt-table c-bolt-table--borderless">
  <table>
    <thead>
      <tr>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bolt Table prop - sticky headers: none 1`] = `
<div class="js-bolt-table c-bolt-table">
  <table>
    <thead>
      <tr>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bolt Table prop - sticky headers: side 1`] = `
<div class="js-bolt-table c-bolt-table c-bolt-table--sticky-side-headers">
  <table>
    <thead>
      <tr>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bolt Table prop - sticky headers: top 1`] = `
<div class="js-bolt-table c-bolt-table c-bolt-table--sticky-top-headers">
  <table>
    <thead>
      <tr>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
